syntax = "proto3";

option go_package = "github.com/cligpt/shai/drive";

package drive;

service AiProto {
  rpc SendChat (ChatRequest) returns (ChatReply) {}
}

message ChatRequest {
  string model = 1;
  string message = 2;
  string role = 3;
  string content = 4;
  string format = 5;
  ChatOption options = 6;
  bool stream = 7;
  string keepAlive = 8;
}

message ChatOption {
  float temperature = 1;
}

message ChatReply {
  string model = 1;
  string createdAt = 2;
  string response = 3;
  bool done = 4;
  repeated int64 context = 5;
}
